# call-me-maybe

./: .gitignore  CHECKLIST_SUBJECT.md  GUIA_PASSO_A_PASSO.md  Makefile  README.md  pyproject.toml  setup.cfg
data/input/: function_calling_tests.json  functions_definition.json
llm_sdk/: README.md  pyproject.toml
moulinette/moulinette/: __main__.py  extract_functions_infos.py  generate_tests_and_corrections.py  output_formatter.py
scripts/: check_environment.py  demo_execution_flow.py
src/: __init__.py  __main__.py  cli.py  decoder.py  errors.py  extractor.py  io_utils.py  llm_client.py  models.py
tests/: test_cleaning.py  test_decoder.py
