[project]
name = "callmemaybe"
version = "0.1.0"
description = "Schema-constrained function calling from natural language prompts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llm-sdk",
    "numpy>=1.26",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "flake8==7.1.2",
    "mypy>=1.10",
    "pytest>=8.0",
]

[dependency-groups]
dev = [
    "flake8==7.1.2",
    "mypy>=1.10",
    "pytest>=8.0",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk" }

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = [
    "llm_sdk/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
