[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Function calling project for 42 curriculum"
requires-python = ">=3.10,<3.15"
dependencies = [
    "llm-sdk",
    "numpy",
    "pydantic",
]

[dependency-groups]
dev = [
    "flake8",
    "mypy",
    "pytest",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk" }

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = [
    "llm_sdk/",
]

[[tool.mypy.overrides]]
module = [
    "llm_sdk",
    "llm_sdk.*",
]
ignore_errors = true
follow_imports = "skip"

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
testpaths = [
    "tests",
]